--- a/glide.yaml
+++ b/glide.yaml
@@ -2,6 +2,7 @@ package: github.com/apigee-internal/transicator
 import:
 - package: github.com/Sirupsen/logrus
   version: ~0.10.0
-testImports:
-- package: github.com/onsi/ginkgo
-- package: github.com/onsi/gomega
+- package: github.com/tylerb/graceful
+  version: ~1.2.12
+- package: github.com/julienschmidt/httprouter
+  version: ~1.1.0
