--- a/glide.yaml
+++ b/glide.yaml
@@ -6,3 +6,6 @@ import:
   version: ~1.2.12
 - package: github.com/julienschmidt/httprouter
   version: ~1.1.0
+- package: github.com/golang/gddo
+  subpackages:
+  - httputil
