--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -8,6 +8,12 @@ jenkins_ci:
   setup_commands:
     # setup commands not needed here, handled in Dockerfile
     - "go get github.com/tools/godep"
+    - "go get github.com/30x/transicator/common"
+    - "go get github.com/30x/transicator/replication"
+    - "go get github.com/30x/transicator/storage"
+    - "go get github.com/golang/gddo/httputil"
+    - "go get github.com/julienschmidt/httprouter"
+
   build_commands:
     # build commands not needed here, handled in Dockerfile
     - "GOOS=linux CGO_ENABLED=0 go build -o changeserver"
