--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -7,7 +7,7 @@ jenkins_ci:
     language: "go"
   setup_commands:
     # setup commands not needed here, handled in Dockerfile
-    - "glide install"
+    - "go get github.com/tools/godep"
 
   build_commands:
     # build commands not needed here, handled in Dockerfile
