--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -7,10 +7,11 @@ jenkins_ci:
     language: "go"
   setup_commands:
     # setup commands not needed here, handled in Dockerfile
-    - "go get github.com/tools/godep"
+    - "go get -u github.com/Masterminds/glide"
 
   build_commands:
     # build commands not needed here, handled in Dockerfile
+    - "glide install"
     - "GOOS=linux CGO_ENABLED=0 go build -o changeserver"
   unit_test:
     - "echo go test ./communication ./discovery ./storage ./raft"
