--- a/changeserver/glide.yaml
+++ b/changeserver/glide.yaml
@@ -10,3 +10,8 @@ import:
   subpackages:
   - httputil
 - package: github.com/gorilla/mux
+- package: github.com/30x/transicator
+  subpackages:
+  - common
+  - replication
+  - storage
