--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -16,7 +16,9 @@ jenkins_ci:
     - "wget http://pkgs.fedoraproject.org/repo/pkgs/leveldb/leveldb-1.9.0.tar.gz/12f11385cb58ae0de66d4bc2cc7f8194/leveldb-1.9.0.tar.gz"
     - "tar -xzf leveldb-1.9.0.tar.gz"
     - "cd leveldb-1.9.0"
-    - "make all"
+    - "pwd"
+    - "make"
+    - "cd .."
     - "sudo cp libleveldb.* /usr/local/lib"
     - "sudo cp -R leveldb /usr/local/include"
     - "glide install"
