--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -13,14 +13,16 @@ jenkins_ci:
     # build commands not needed here, handled in Dockerfile
     - "sudo yum install -y gcc wget"
     - "sudo yum groupinstall -y 'Development Tools'"
-    - "wget http://pkgs.fedoraproject.org/repo/pkgs/leveldb/leveldb-1.9.0.tar.gz/12f11385cb58ae0de66d4bc2cc7f8194/leveldb-1.9.0.tar.gz"
-    - "sudo tar -xzf leveldb-1.9.0.tar.gz"
-    - "cd leveldb-1.9.0"
+    - "sudo wget http://pkgs.fedoraproject.org/repo/pkgs/leveldb/leveldb-1.9.0.tar.gz/12f11385cb58ae0de66d4bc2cc7f8194/leveldb-1.9.0.tar.gz -P /tmp"
+    - "sudo tar -xzf /tmp/leveldb-1.9.0.tar.gz"
+    - "pushd ."
+    - "pwd"
+    - "cd /tmp/leveldb-1.9.0"
     - "pwd"
     - "make"
-    - "cd .."
     - "sudo cp libleveldb.* /usr/local/lib"
     - "sudo cp -R leveldb /usr/local/include"
+    - "popd"
     - "glide install"
     - "GOOS=linux go build -o changeserver"
   unit_test:
