--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -17,7 +17,8 @@ jenkins_ci:
     - "sudo tar -xzf /tmp/leveldb-1.9.0.tar.gz"
     - "pushd ."
     - "pwd"
-    - "cd /tmp/leveldb-1.9.0"
+    - "ls /tmp"
+    - "sudo cd /tmp/leveldb-1.9.0"
     - "pwd"
     - "make"
     - "sudo cp libleveldb.* /usr/local/lib"
