--- a/changeserver/metadata/apigee-file.yaml
+++ b/changeserver/metadata/apigee-file.yaml
@@ -17,7 +17,7 @@ jenkins_ci:
     - "sudo tar xf /tmp/leveldb-1.9.0.tar.gz -C /tmp"
     - "sudo make -C /tmp/leveldb-1.9.0"
     - "sudo cp /tmp/leveldb-1.9.0/libleveldb.* /usr/local/lib"
-    - "sudo cp -R /tmp/leveldb-1.9.0/incude/leveldb /usr/local/include"
+    - "sudo cp -R /tmp/leveldb-1.9.0/include/leveldb /usr/local/include"
     - "glide install"
     - "GOOS=linux go build -o changeserver"
   unit_test:
