--- a/changeserver/Dockerfile
+++ b/changeserver/Dockerfile
@@ -24,4 +24,4 @@ COPY metadata/apigee-file.yaml /
 EXPOSE 9000
 VOLUME [ "/data" ]
 
-ENTRYPOINT [ "/changeserver", "-p", "9000", "-d", "/data", "-u", "postgres://docker@localhost/postgres", "-s", "replication"]
+ENTRYPOINT [ "/changeserver", "-p", "9000", "-d", "/data", "-u", "postgres://docker@10.1.15.100/docker", "-s", "replication"]
