--- a/changeserver/Dockerfile.changeserver
+++ b/changeserver/Dockerfile.changeserver
@@ -27,13 +27,9 @@ RUN \
   && apk add --no-cache \
      git gcc musl-dev leveldb@testing leveldb-dev@testing glide@community
 
+
 RUN \
-    (cd /go/src/github.com/30x/transicator/changeserver; glide install) \
+    (cd /go/src/github.com/30x/transicator/changeserver;) \
  && (cd /go/src/github.com/30x/transicator/changeserver; go build -o /changeserver) \
- && rm -r /go \
- && mkdir /data
+ && rm -r /go
 
-EXPOSE 9000
-VOLUME [ "/data" ]
-
-ENTRYPOINT [ "/changeserver", "-p", "9000", "-d", "/data"]
