--- a/changeserver/Makefile
+++ b/changeserver/Makefile
@@ -7,10 +7,10 @@ local: $(ALLDEPS)
 docker:
 	./extract_binary.sh
 	./local_docker.sh
+	rm -f ./changeserver
 
 localtest: local
 	go test -v `glide nv`
 
 clean:
 	rm -f ./changeserver
-
