--- a/changeserver/Dockerfile
+++ b/changeserver/Dockerfile
@@ -16,13 +16,12 @@
 #
 # docker run --rm -t changeserver -s test -u postgres://user:pass@host/databasename?ssl=false
 
-FROM golang:1.7.1-alpine
+FROM alpine:3.4
 
 RUN \
      echo "@testing http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
-  && echo "@community http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
-  && apk add --no-cache \
-     leveldb-dev@testing glide@community && mkdir /data
+  && apk add --no-cache leveldb@testing \
+  && mkdir /data
 
 COPY changeserver /
 COPY metadata/apigee-file.yaml /
@@ -31,5 +30,3 @@ EXPOSE 9000
 VOLUME [ "/data" ]
 
 ENTRYPOINT ["/changeserver", "-p", "9000", "-u", "postgres://docker@10.1.15.207:5432/docker", "-d", "/data"]
-
-
