--- a/pgoutput/Dockerfile
+++ b/pgoutput/Dockerfile
@@ -1,57 +1,16 @@
-#
-# example Dockerfile for https://docs.docker.com/examples/postgresql_service/
-#
+FROM postgres:9.5.4
 
-FROM ubuntu
-MAINTAINER SvenDowideit@docker.com
+RUN mkdir /tmp/postgresplugin
+COPY . /tmp/postgresplugin/pgoutput
+COPY scripts /docker-entrypoint-initdb.d
 
-# Add the PostgreSQL PGP key to verify their Debian packages.
-# It should be the same key as https://www.postgresql.org/media/keys/ACCC4CF8.asc
-RUN apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys B97B0AFCAA1A47F044F244A07FCC7D46ACCC4CF8
-
-# Add PostgreSQL's repository.
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ precise-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-
-# Install ``python-software-properties``, ``software-properties-common`` and PostgreSQL 9.5
-
-RUN apt-get update && apt-get install -y python-software-properties software-properties-common postgresql-9.5 postgresql-client-9.5 postgresql-contrib-9.5 build-essential python-psycopg2 libpq-dev postgresql-server-dev-all iputils-ping
-
-
-RUN mkdir /tmp/postgressplugin
-COPY . /tmp/postgressplugin/pgoutput
-
-RUN (cd /tmp/postgressplugin/pgoutput; make; make install)
-
-
-# Run the rest of the commands as the ``postgres`` user created by the ``postgres-9.5`` package when it was ``apt-get installed``
-USER postgres
-
-# Create a PostgreSQL role named ``docker`` with ``docker`` as the password and
-# then create a database `docker` owned by the ``docker`` role.
-# Note: here we use ``&&\`` to run commands one after the other - the ``\``
-#       allows the RUN command to span multiple lines.
-RUN    /etc/init.d/postgresql start &&\
-    psql --command "CREATE USER docker WITH SUPERUSER PASSWORD 'docker';" &&\
-    createdb -O docker docker
-
-# Adjust PostgreSQL configuration so that remote connections to the
-# database are possible.
-RUN echo "host all  all    0.0.0.0/0  trust" >> /etc/postgresql/9.5/main/pg_hba.conf
-RUN echo "host    replication     all  0.0.0.0/0   trust" >> /etc/postgresql/9.5/main/pg_hba.conf
-
-# Update /etc/postgresql/9.5/main/postgresql.conf
-RUN echo "listen_addresses='*'" >> /etc/postgresql/9.5/main/postgresql.conf
-RUN echo "wal_level = logical" >> /etc/postgresql/9.5/main/postgresql.conf
-RUN echo "max_wal_senders = 3" >> /etc/postgresql/9.5/main/postgresql.conf
-RUN echo "max_replication_slots = 3" >> /etc/postgresql/9.5/main/postgresql.conf
-RUN echo "port = 5432" >> /etc/postgresql/9.5/main/postgresql.conf
-
-# Expose the PostgreSQL port
-EXPOSE 5432
+# Install tools to build our plugin, build it, and install it
+RUN \
+  apt-get update && \
+  apt-get install -y gcc make postgresql-server-dev-9.5 && \
+  cd /tmp/postgresplugin/pgoutput && \
+  make install && \
+  rm -rf /tmp/postgresplugin
 
 # Add VOLUMEs to allow backup of config, logs and databases
-VOLUME  ["/etc/postgresql", "/var/log/postgresql", "/var/lib/postgresql"]
-
-# Set the default command to run when starting the container
-ENTRYPOINT ["/usr/lib/postgresql/9.5/bin/postgres", "-D", "/var/lib/postgresql/9.5/main", "-c", "config_file=/etc/postgresql/9.5/main/postgresql.conf"]
-
+VOLUME  ["/var/log/postgresql", "/var/lib/postgresql"]
