--- a/glide.yaml
+++ b/glide.yaml
@@ -6,14 +6,12 @@ import:
   version: ~1.2.12
 - package: github.com/julienschmidt/httprouter
   version: ~1.1.0
-- package: github.com/golang/gddo
-  subpackages:
-  - httputil
 - package: github.com/gorilla/mux
 - package: github.com/gorilla/context
 - package: github.com/golang/protobuf
   subpackages:
   - proto
+- package: github.com/30x/goscaffold
 testImport:
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
