--- a/changeserver/Dockerfile.changeserver
+++ b/changeserver/Dockerfile.changeserver
@@ -16,19 +16,12 @@
 #
 # docker run --rm -t changeserver -s test -u postgres://user:pass@host/databasename?ssl=false
 
-FROM golang:1.7.1-alpine
+FROM thirtyx/go-leveldb:1.7.1
 
 COPY . /go/src/github.com/30x/transicator
 
-# We need both "testing" and "community" repositories here.
 RUN \
-     echo "@testing http://nl.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories \
-  && echo "@community http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories \
-  && apk add --no-cache \
-     git gcc musl-dev leveldb@testing leveldb-dev@testing glide@community
-
-
-RUN \
-    (cd /go/src/github.com/30x/transicator;glide install) \
+    rm -rf /go/src/github.com/30x/transicator/vendor \
+ && (cd /go/src/github.com/30x/transicator;glide install) \
  && (cd /go/src/github.com/30x/transicator/changeserver; go build -o /changeserver) \
  && rm -r /go
