Adding proto-c to the output plugin.

--- a/pgoutput/Dockerfile
+++ b/pgoutput/Dockerfile
@@ -1,7 +1,7 @@
 FROM postgres:9.5.4
 
-RUN mkdir /tmp/postgresplugin
-COPY . /tmp/postgresplugin/pgoutput
+RUN mkdir /src
+COPY . /src/pgoutput
 # Contents of "scripts" fix pg_hba.conf and postgresql.conf
 COPY scripts /docker-entrypoint-initdb.d
 
@@ -9,9 +9,17 @@ COPY scripts /docker-entrypoint-initdb.d
 # images, and not have to re-install the build tools after the first build
 RUN \
      apt-get update \
-  && apt-get install -y gcc make postgresql-server-dev-9.5
+  && apt-get install -y wget gcc make pkg-config libprotobuf-dev postgresql-server-dev-9.5
 
-RUN (cd /tmp/postgresplugin/pgoutput; make; make install)
+# Debian archives don't have current version of protobuf-c, so build it.
+# Then build the output plugin,
+# Then get rid of all that source.
+RUN \
+    wget -O /src/protobuf-c.tar.gz https://github.com/protobuf-c/protobuf-c/releases/download/v1.2.1/protobuf-c-1.2.1.tar.gz \
+ && (cd /src; tar xf ./protobuf-c.tar.gz) \
+ && (cd /src/protobuf-c-1.2.1; ./configure --disable-protoc; make install) \
+ && (cd /src/pgoutput; make clean install) \
+ && rm -rf /src
 
 # Remove the build systems to reduce security surface area
 RUN apt-get purge -y --auto-remove  gcc make postgresql-server-dev-9.5
