--- a/snapshotserver/Dockerfile.snapshotserver
+++ b/snapshotserver/Dockerfile.snapshotserver
@@ -13,8 +13,10 @@ FROM thirtyx/go-leveldb:1.7.1
 COPY . /go/src/github.com/30x/transicator
 
 RUN \
-    rm -rf /go/src/github.com/30x/transicator/vendor \
- && (cd /go/src/github.com/30x/transicator; glide install) \
+    pwd \
+ && ls \
+ && rm -rf /go/src/github.com/30x/transicator/vendor \
+ && (cd /go/src/github.com/30x/transicator; pwd; ls; glide install) \
  && (cd /go/src/github.com/30x/transicator/snapshotserver; go build -o /snapshotserver) \
  && rm -r /go
 
