--- a/Dockerfile.snapshotserver
+++ b/Dockerfile.snapshotserver
@@ -14,7 +14,7 @@ COPY . /go/src/github.com/30x/transicator
 
 RUN \
     rm -rf /go/src/github.com/30x/transicator/vendor \
- && (cd /go/src/github.com/30x/transicator; glide install) \
+ && (cd /go/src/github.com/30x/transicator; glide install --skip-test) \
  && (cd /go/src/github.com/30x/transicator/snapshotserver; go build -o /snapshotserver) \
  && rm -r /go
 
