Clean up docker files a bit.

--- a/Dockerfile.snapshotserver
+++ b/Dockerfile.snapshotserver
@@ -13,8 +13,7 @@ FROM thirtyx/go-leveldb:1.7.1
 COPY . /go/src/github.com/30x/transicator
 
 RUN \
-    rm -rf /go/src/github.com/30x/transicator/vendor \
- && (cd /go/src/github.com/30x/transicator; glide install --skip-test) \
+    (cd /go/src/github.com/30x/transicator; glide install --skip-test) \
  && (cd /go/src/github.com/30x/transicator/snapshotserver; go build -o /snapshotserver) \
  && rm -r /go
 
