--- a/Dockerfile.changeserver
+++ b/Dockerfile.changeserver
@@ -21,8 +21,7 @@ FROM thirtyx/go-leveldb:1.7.1
 COPY . /go/src/github.com/30x/transicator
 
 RUN \
-    rm -rf /go/src/github.com/30x/transicator/vendor \
- && (cd /go/src/github.com/30x/transicator;glide install --skip-test) \
+    (cd /go/src/github.com/30x/transicator;glide install --skip-test) \
  && (cd /go/src/github.com/30x/transicator/changeserver; go build -o /changeserver) \
  && rm -r /go
 
