--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -3,7 +3,6 @@ FROM thirtyx/go-leveldb:1.7.1
 COPY . /go/src/github.com/30x/transicator
 
 RUN \
-     rm -rf /go/src/github.com/30x/transicator/vendor \
-  && (cd /go/src/github.com/30x/transicator;glide install)
+   (cd /go/src/github.com/30x/transicator;glide install)
 
 WORKDIR /go/src/github.com/30x/transicator
