--- a/pgoutput/Makefile
+++ b/pgoutput/Makefile
@@ -2,6 +2,7 @@ MODULE_big = transicator_output
 OBJS = transicator_output.o output_string.o output_proto.o transicator.pb-c.o
 
 PG_CONFIG = pg_config
+PG_CPPFLAGS=-I/usr/local/include 
 PGXS := $(shell $(PG_CONFIG) --pgxs)
 include $(PGXS)
 SHLIB_LINK = -lprotobuf-c
