--- a/Dockerfile.changeserver
+++ b/Dockerfile.changeserver
@@ -18,10 +18,10 @@
 
 FROM thirtyx/go-leveldb:1.7.1
 
-COPY . /go/src/github.com/30x/transicator
+COPY . /go/src/github.com/apigee-labs/transicator
 
 RUN \
-    (cd /go/src/github.com/30x/transicator/changeserver; go build -o /changeserver) \
+    (cd /go/src/github.com/apigee-labs/transicator/changeserver; go build -o /changeserver) \
  && rm -r /go
 
 EXPOSE 9000 10000
