--- a/Dockerfile.snapshotserver
+++ b/Dockerfile.snapshotserver
@@ -10,10 +10,10 @@
 
 FROM thirtyx/go-leveldb:1.7.1
 
-COPY . /go/src/github.com/30x/transicator
+COPY . /go/src/github.com/apigee-labs/transicator
 
 RUN \
-    (cd /go/src/github.com/30x/transicator/snapshotserver; go build -o /snapshotserver) \
+    (cd /go/src/github.com/apigee-labs/transicator/snapshotserver; go build -o /snapshotserver) \
  && rm -r /go
 
 EXPOSE 9001 10001
