--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,5 +1,5 @@
 FROM thirtyx/go-leveldb:1.7.1
 
-COPY . /go/src/github.com/30x/transicator
+COPY . /go/src/github.com/apigee-labs/transicator
 
-WORKDIR /go/src/github.com/30x/transicator
+WORKDIR /go/src/github.com/apigee-labs/transicator
