--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/30x/transicator
+package: github.com/apigee-labs/transicator
 license: Apache-2.0
 import:
 - package: github.com/Sirupsen/logrus
@@ -10,6 +10,10 @@ import:
   - proto
 - package: github.com/30x/goscaffold
   version: master
-testImport:
+- package: github.com/tecbot/gorocksdb
+  version: master
+- package: gopkg.in/gemnasium/logrus-airbrake-hook.v2
+  version: master
 - package: github.com/onsi/ginkgo
+testImport:
 - package: github.com/onsi/gomega
