--- a/glide.yaml
+++ b/glide.yaml
@@ -10,6 +10,8 @@ import:
   - proto
 - package: github.com/30x/goscaffold
   version: master
+- package: github.com/spf13/viper
+  version: master
 testImport:
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
