--- a/glide.yaml
+++ b/glide.yaml
@@ -12,6 +12,8 @@ import:
   version: master
 - package: github.com/spf13/viper
   version: master
+- package: github.com/spf13/pflag
+  version: master
 testImport:
 - package: github.com/onsi/ginkgo
 - package: github.com/onsi/gomega
