--- a/glide.yaml
+++ b/glide.yaml
@@ -17,5 +17,7 @@ import:
 - package: github.com/onsi/ginkgo
 - package: github.com/spf13/viper
   version: master
+- package: github.com/spf13/pflag
+  version: master
 testImport:
 - package: github.com/onsi/gomega
