Moved Docker images to RocksDB.

--- a/Dockerfile.changeserver
+++ b/Dockerfile.changeserver
@@ -16,7 +16,7 @@
 #
 # docker run --rm -t changeserver -s test -u postgres://user:pass@host/databasename?ssl=false
 
-FROM thirtyx/go-leveldb:1.7.1
+FROM thirtyx/go-rocksdb:v1.7.1
 
 COPY . /go/src/github.com/apigee-labs/transicator
 
