--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -3,3 +3,6 @@ FROM thirtyx/go-rocksdb:v1.7.1
 COPY . /go/src/github.com/apigee-labs/transicator
 
 WORKDIR /go/src/github.com/apigee-labs/transicator
+
+RUN \
+  apk add --no-cache bash
